--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,10 +8,17 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
+    <div class="header">
+      <h1 id="logo-text">The Hike App</h1>
+    </div>
     <div class="container">
-    <h1></h1>
     <hr>
+      <div id="test-space">
+      </div>
       <%= yield %>
+    </div>
+    <div id="footer">
+      <h2>footer</h2>
     </div>
   </body>
 </html>
