--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="header">
-      <h1>The Hike App</h1>
+      <a href="/"><h1>The Hike App</h1></a>
     </div>
     <div class="container" id="main">
 
