remove ratings table and join table from database schema

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <a href="/regions/<%= @urban_sprawl.id %>">
+  <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
       <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2><%= @urban_sprawl.name %></h2>
+      <h2>Urban Sprawl</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
