update front end styles and remove ratings table and join table from database schema (#7)
* initialize files

* update initialize files

* add database migrations

* add schema to files

* create and test database table associations

* further connect and test database associations

* add template front-end

* create basic layout for index page

* create regions page and hike page and add some basic css styles

* remove ratings table and join table from database schema

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,37 @@
-<%= # sample index html
-# <form action="/phrase_parser">
-#   <div class="form-group">
-#      <label for="title">gimme phrase or word!</label>
-#      <input name="phrase1" class="form-control" type="text">
-#      <label for="title">gimme another!</label>
-#      <input name="phrase2" class="form-control" type="text">
-#   </div>
-#   <hr>
-#   <button action="/" class="btn btn-success">what am i?</button>
-# </form>
-%>
+<div class="row">
+  <a href="/regions/urban-sprawl">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>Urban Sprawl</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+  </a>
+  <a href="#">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>The Gorge</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+  </a>
+  <a href="#">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>The Gorge</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+  </a>
+  <a href="#">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>The Gorge</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+  </a>
