--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,18 +1,64 @@
-#logo-text {
+h1 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2, h3, h4, h5 {
+  font-family: 'News Cycle', sans-serif;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+#header h1 {
   text-align: center;
+  padding: 75px 0;
+  color: #80a0bd;
+  font-size: 70px;
+  margin: 0;
+}
+
+#main {
 }
 
 #footer {
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
-  background-color: #efefef;
+  background-color: #6687a5;
   text-align: center;
 }
 
-#test-space {
-  height:3000px;
-  background: black;
+.region-image {
+  width: 100%;
+  background-image: url("img/coyote_wall.jpg");
+  border-radius: 75%;
+  margin: 30px 0;
+}
+
+.region-box {
+  padding: 0 40px;
+  text-align: center;
+}
+
+.region-box h2 {
+  color: #656565;
+  padding-bottom: 20px;
+}
+
+.region-box p {
+  color: #656565;
+}
+
+.region-box a {
+  color: inherit;
+}
+
+.region-box h2:hover {
+  color: #7895af;
+}
+
+.region-title {
+  padding-bottom: 30px;
 }
