--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,11 @@
       <%= yield %>
     </div>
     <div id="footer">
-      <h5>footer</h5>
+      <h5>
+        <a href="/search">Search for a hike</a>
+        <a href="/">Home</a>
+        <a href="/map">Search our map</a>
+      </h5>
     </div>
   </body>
 </html>
