--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,9 +19,11 @@
       <%= yield %>
     </div>
     <div id="footer">
-      <a href="/search">Search for a hike</a>
-      <a href="/">Home</a>
-      <a href="/map">Search our map</a>
+      <a href="/search">Search</a> .
+      <a href="/map">Map</a> .
+      <a href="/">Home</a> .
+      <a href="/map">Features</a> .
+      <a href="/map">Landmarks</a> 
     </div>
   </body>
 </html>
