--- a/views/search.erb
+++ b/views/search.erb
@@ -57,5 +57,5 @@
      </label>
     </div>
   </div>
-  <button type="submit" class="btn btn-info">Search</button>
+  <button type="submit" class="btn btn-lg btn-info">Search</button>
 </form>
