--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 h1 {
   font-family: 'Montserrat', sans-serif;
+  color: #656565;
 }
 
 h2, h3, h4, h5 {
@@ -14,6 +15,8 @@ a:hover {
   text-decoration: none;
 }
 
+/*HEADER STYLES*/
+
 #header h1 {
   text-align: center;
   padding: 75px 0;
@@ -22,10 +25,10 @@ a:hover {
   margin: 0;
 }
 
-#main {
-}
+/*FOOTER STYLES*/
 
 #footer {
+  padding: 15px 0;
   position: fixed;
   right: 0;
   bottom: 0;
@@ -33,6 +36,19 @@ a:hover {
   background-color: #6687a5;
   text-align: center;
   color: white
+}
+
+#footer a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  padding: 10px 30px;
+}
+
+/*INDEX STYLES*/
+
+.region-title {
+  padding-bottom: 30px;
+
 }
 
 .region-image {
@@ -64,6 +80,70 @@ a:hover {
   color: #7895af;
 }
 
-.region-title {
+/*SEARCH STYLES*/
+
+.region {
+  font-size: 25px;
+  font-family: 'News Cycle', sans-serif;
+  color: #656565;
+}
+
+.region input[type="radio"] {
+  margin-top: 11px;
+  vertical-align: middle;
+}
+
+.region input[type="checkbox"] {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+.check {
+  font-size: 20px;
+  padding: 0 20px;
+}
+
+.search-group {
+  padding: 15px 0;
+}
+
+/*HIKE PAGE STYLES*/
+
+.hike-image {
+  width: 75%;
+  background-image: url("img/coyote_wall.jpg");
+  border-radius: 75%;
+  margin: 30px 0;
+}
+
+.hike-details {
+  color: #656565;
+  font-size: 20px;
+}
+
+.hike-sidebar {
+  border-right: 1px solid #eee;
+  padding: 0 40px;
+  text-align: center;
+}
+
+.hike-main {
+  padding: 0 50px 50px 50px;
+}
+
+.hike-main h1 {
+}
+
+.hike-main p {
+  font-size: 18px;
+  color: #656565;
+}
+
+.stats {
+  font-weight: 200;
+  color: #3d79af;
+}
+
+.hike-section {
   padding-bottom: 30px;
 }
