plug in database data on hike pages

--- a/views/hike.erb
+++ b/views/hike.erb
@@ -4,11 +4,11 @@
   <hr>
   <p class="hike-details">Current Weather: <span class="stats"><%= @hike.weather %></span></p>
   <hr>
-  <p class="hike-details">Difficulty: <span class="stats">Moderate</span></p>
+  <p class="hike-details">Difficulty: <span class="stats"><%= @hike.difficulty %></span></p>
   <hr>
-  <p class="hike-details">Distance: <span class="stats">2.3 miles</span></p>
+  <p class="hike-details">Distance: <span class="stats"><%= @hike.distance %> miles</span></p>
   <hr>
-  <p class="hike-details">Elevation: <span class="stats">85 feet</span></p>
+  <p class="hike-details">Elevation: <span class="stats"><%= @hike.elevation %> feet</span></p>
   <hr>
 </div>
 <div class="col-md-8 hike-main">
