--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,7 +136,7 @@ a:hover {
   padding-bottom: 10px;
 }
 
-.hike-main p {
+.hike-main p, td {
   font-size: 18px;
   color: #656565;
 }
@@ -148,6 +148,24 @@ a:hover {
 
 .hike-section {
   padding-bottom: 30px;
+}
+
+table.forecast {
+
+  width: 100%;
+}
+
+table.forecast tr td:first-child {
+  border-right: 1px solid #6687a5;
+}
+
+table.forecast tr td {
+  border-bottom: 1px solid #6687a5;
+  padding-bottom: 10px;
+}
+
+table.forecast tr td:last-child {
+  text-align: center;
 }
 
 #map {
