--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -163,7 +163,7 @@ a:hover {
   display: inline-block;
   padding: 10px 15px;
   margin: 10px 10px 10px 0;
-  background: #e6e6e6;
+  background: #f5f5f5;
 }
 
 .feature p {
