add random hike feature (#23)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,6 +24,7 @@
       <a href="/">Home</a> .
       <a href="/map">Features</a> .
       <a href="/map">Landmarks</a>
+      <a href="/hike/random">Return a random hike</a> .
     </div>
   </body>
 </html>
