add fisrt two integration specs and update random hike generator

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,11 +20,10 @@
     </div>
     <div id="footer">
       <a href="/search">Search</a> .
-      <a href="/map">Map</a> .
-      <a href="/">Home</a> .
       <a href="/map">Features</a> .
+      <a href="/">Home</a> .
       <a href="/map">Landmarks</a> .
-      <a href="/hikes/<%= rand(Hike.count) %>">Return a random hike</a>
+      <a href="/hikes/<%= rand(Hike.count) %>">Random hike</a>
     </div>
   </body>
 </html>
