--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,9 +20,8 @@
     </div>
     <div id="footer">
       <a href="/search">Search</a> .
-      <a href="/map">Features</a> .
+      <a href="/features">Features</a> .
       <a href="/">Home</a> .
-      <a href="/map">Landmarks</a> .
       <a href="/hikes/<%= rand(Hike.count) %>">Random hike</a>
     </div>
   </body>
