update index layout

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,36 +2,51 @@
   <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
       <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Urban Sprawl</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <h2>Portland</h2>
     </div>
   </a>
   <a href="#">
     <div class="col-md-3 region-box">
       <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>The Gorge</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <h2>Willamette Valley</h2>
     </div>
   </a>
   <a href="#">
     <div class="col-md-3 region-box">
       <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>The Coast</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <h2>Oregon Coast</h2>
     </div>
   </a>
   <a href="#">
     <div class="col-md-3 region-box">
       <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Tillamook</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <h2>Columbia River Gorge</h2>
     </div>
   </a>
+</div>
+<div class="row">
+  <a href="/regions/urban-sprawl">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>Mount Hood</h2>
+    </div>
+  </a>
+  <a href="#">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>Central Oregon</h2>
+    </div>
+  </a>
+  <a href="#">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>Southern Oregon</h2>
+    </div>
+  </a>
+  <a href="#">
+    <div class="col-md-3 region-box">
+      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
+      <h2>Eastern Oregon</h2>
+    </div>
+  </a>
+</div>
