--- a/views/search.erb
+++ b/views/search.erb
@@ -1,5 +1,4 @@
-<h1>Enter criteria to search Hikes</h1>
-
+<h1>Search</h1>
   <div class="search-group" id="search1">
     <form action="/search1">
       <div class="form-group">
@@ -68,8 +67,6 @@
 
   <div class="search-group" id="search6" action="/search6">
     <h3>Which features are you looking for in your hike?</h3>
-    <div class="checkbox">
-     <label class="check">
        <input type="checkbox" name="feature" value=><%= "All Season" %>
      </label>
      <label class="check">
