--- a/views/hike.erb
+++ b/views/hike.erb
@@ -1,5 +1,5 @@
 <div class="col-md-4 hike-sidebar">
-  <img class="hike-image" src="../img/coyote_wall.jpg" alt="image of coyote wall">
+  <img class="hike-image" src="<%= @hike.img_src %>" alt="image of coyote wall">
   <h1><%= @hike.name %></h1>
   <hr>
   <p class="hike-details">Current Weather: <span class="stats"><%= @current_weather %></span></p>
