--- a/views/index.erb
+++ b/views/index.erb
@@ -1,52 +1,68 @@
-<div class="row">
+<div class="row region-row">
   <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Portland</h2>
+      <div id="portland" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Portland</h2>
+      </div>
     </div>
   </a>
-  <a href="#">
-    <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Willamette Valley</h2>
-    </div>
-  </a>
-  <a href="#">
-    <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Oregon Coast</h2>
-    </div>
-  </a>
-  <a href="#">
-    <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Columbia River Gorge</h2>
-    </div>
-  </a>
-</div>
-<div class="row">
   <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Mount Hood</h2>
+      <div id="willamette-valley" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Willamette Valley</h2>
+      </div>
     </div>
   </a>
-  <a href="#">
+  <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Central Oregon</h2>
+      <div id="oregon-coast" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Oregon Coast</h2>
+      </div>
     </div>
   </a>
-  <a href="#">
+  <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Southern Oregon</h2>
+      <div id="columbia-gorge" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Columbia Gorge</h2>
+      </div>
     </div>
   </a>
-  <a href="#">
+  </div>
+<div class="row region-row">
+  <a href="/regions/urban-sprawl">
     <div class="col-md-3 region-box">
-      <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall">
-      <h2>Eastern Oregon</h2>
+      <div id="mount-hood" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Mount Hood</h2>
+      </div>
+    </div>
+  </a>
+  <a href="/regions/urban-sprawl">
+    <div class="col-md-3 region-box">
+      <div id="central-oregon" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Central Oregon</h2>
+      </div>
+    </div>
+  </a>
+  <a href="/regions/urban-sprawl">
+    <div class="col-md-3 region-box">
+      <div id="southern-oregon" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Southern Oregon</h2>
+      </div>
+    </div>
+  </a>
+  <a href="/regions/urban-sprawl">
+    <div class="col-md-3 region-box">
+      <div id="eastern-oregon" class="bg-image">
+        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
+        <h2 class="region-text">Eastern Oregon</h2>
+      </div>
     </div>
   </a>
 </div>
