--- a/views/search.erb
+++ b/views/search.erb
@@ -1,4 +1,5 @@
-<h1>Search</h1>
+<h1>Enter criteria to search Hikes</h1>
+
 
   <div class="search-group" id="search1">
     <form action="/search1">
@@ -10,17 +11,18 @@
     </form>
   </div>
 
-  <div class="search-group" id="search2" action="/search2">
+  <!-- <div class="search-group" id="search2" action="/search2">
     <label for="search2">Distance:</label>
     <select>
       <option disabled selected value> -- select an option -- </option>
-      <option value="shortest">0-2 miles</option>
-      <option value="short">2 to 5 miles</option>
-      <option value="medium">5 to 10 miles</option>
-      <option value="long">Over 10 miles</option>
+      <option value='2'>0-2 miles</option>
+      <option value="5">2 to 5 miles</option>
+      <option value="10">5 to 10 miles</option>
+      <option value="100">Over 10 miles</option>
     </select>
     <button type="submit" class="btn btn-lg btn-info">Search</button>
-  </div>
+  </div> -->
+
 
   <div class="search-group" id="search3" action="/search3">
     <h2>Elevation</h2>
@@ -36,7 +38,7 @@
   </div>
 
   <div class="search-group" id="search4" action="/search4">
-    <h2>Elevation</h2>
+    <h2>Difficulty</h2>
     <select>
       <option disabled selected value> -- select an option -- </option>
       <option value="easy">easy</option>
@@ -67,6 +69,8 @@
 
   <div class="search-group" id="search6" action="/search6">
     <h3>Which features are you looking for in your hike?</h3>
+    <div class="checkbox">
+     <label class="check">
        <input type="checkbox" name="feature" value=><%= "All Season" %>
      </label>
      <label class="check">
