--- a/views/search_results.erb
+++ b/views/search_results.erb
@@ -1,5 +1,6 @@
 Your search results:
 
-# <% @hikes.each do |hike| %>
-#   <a href="/hikes/<%= hike.id %>"><h3><%= hike.name %></h3></a>
-# <% end %>
+<% @hikes.each do |hike| %>
+  <a href="/hikes/<%= hike.id %>"><h3><%= hike.name %></h3></a>
+<% end %>
+
