--- a/views/index.erb
+++ b/views/index.erb
@@ -1,66 +1,58 @@
 <div class="row region-row">
-  <a href="/regions/urban-sprawl">
+  <a href="/portland">
     <div class="col-md-3 region-box">
       <div id="portland" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Portland</h2>
       </div>
     </div>
   </a>
-  <a href="/regions/urban-sprawl">
+  <a href="/willamette-valley">
     <div class="col-md-3 region-box">
       <div id="willamette-valley" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Willamette Valley</h2>
       </div>
     </div>
   </a>
-  <a href="/regions/urban-sprawl">
+  <a href="/oregon-coast">
     <div class="col-md-3 region-box">
       <div id="oregon-coast" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Oregon Coast</h2>
       </div>
     </div>
   </a>
-  <a href="/regions/urban-sprawl">
+  <a href="/columbia-gorge">
     <div class="col-md-3 region-box">
       <div id="columbia-gorge" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Columbia Gorge</h2>
       </div>
     </div>
   </a>
   </div>
 <div class="row region-row">
-  <a href="/regions/urban-sprawl">
+  <a href="/mount-hood">
     <div class="col-md-3 region-box">
       <div id="mount-hood" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Mount Hood</h2>
       </div>
     </div>
   </a>
-  <a href="/regions/urban-sprawl">
+  <a href="/central">
     <div class="col-md-3 region-box">
       <div id="central-oregon" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Central Oregon</h2>
       </div>
     </div>
   </a>
-  <a href="/regions/urban-sprawl">
+  <a href="/southern">
     <div class="col-md-3 region-box">
       <div id="southern-oregon" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Southern Oregon</h2>
       </div>
     </div>
   </a>
-  <a href="/regions/urban-sprawl">
+  <a href="/eastern">
     <div class="col-md-3 region-box">
       <div id="eastern-oregon" class="bg-image">
-        <!-- <img class="region-image" src="img/coyote_wall.jpg" alt="image of coyote wall"> -->
         <h2 class="region-text">Eastern Oregon</h2>
       </div>
     </div>
