--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,7 @@ a:hover {
 }
 
 #header {
-  padding: 50px 0 20px 0;
+  padding: 75px 0 20px 0;
 }
 
 #header h1 {
@@ -100,7 +100,7 @@ a:hover {
   width: 220px;
   height: 220px;
   background-size: 220px;
-  padding-top: 70px;  
+  padding-top: 70px;
 }
 
 .region-text {
@@ -176,11 +176,13 @@ a:hover {
 /*HIKE PAGE STYLES*/
 
 .hike-image {
-  width: 220px;
-  height: 220px;
-  background-image: url("img/coyote_wall.jpg");
+  display: block;
+  width: 242px;
+  height: 242px;
+  background-size: 350px;
+  background-repeat: no-repeat;
   border-radius: 75%;
-  margin: 30px 0;
+  margin: 20px auto 30px auto;
 }
 
 .hike-details {
